hover при наведении на картинки в блоке works

--- a/3.sarajevo/index.html
+++ b/3.sarajevo/index.html
@@ -247,52 +247,68 @@
                 <section class="portfolio">
                     <ul class="portfolio-items">
                         <li class="portfolio-item" data-type="branding">
-                            <i class="far fa-eye descr"></i>
-                            <span class="descr">Labore et dolore magnam</span>
-                            <span class="descr">Photography</span>
-                            <img src="images/foto-one.png" alt="foto-one">
+							<img src="images/foto-one.png" alt="foto-one">
+							<section class="portfolio-descr">
+								<i class="far fa-eye descr"></i>
+								<span class="descr">Labore et dolore magnam</span>
+								<span class="descr">Photography</span> 
+							</section>   
                         </li>
                         <li class="portfolio-item" data-type="web">
-                            <i class="far fa-eye descr"></i>
-                            <span class="descr">Labore et dolore magnam</span>
-                            <span class="descr">Photography</span>
-                            <img src="images/foto-two.png" alt="foto-two">
+							<img src="images/foto-two.png" alt="foto-two">
+                            <section class="portfolio-descr">
+								<i class="far fa-eye descr"></i>
+								<span class="descr">Labore et dolore magnam</span>
+								<span class="descr">Photography</span> 
+							</section> 
                         </li>
                         <li class="portfolio-item" data-type="logo">
-                            <i class="far fa-eye descr"></i>
-                            <span class="descr">Labore et dolore magnam</span>
-                            <span class="descr">Photography</span>
-                            <img src="images/foto-three.png" alt="foto-three">
+							<img src="images/foto-three.png" alt="foto-three">
+                            <section class="portfolio-descr">
+								<i class="far fa-eye descr"></i>
+								<span class="descr">Labore et dolore magnam</span>
+								<span class="descr">Photography</span> 
+							</section> 
                         </li>
                         <li class="portfolio-item">
-                            <i class="far fa-eye descr"></i>
-                            <span class="descr">Labore et dolore magnam</span>
-                            <span class="descr">Photography</span>
-                            <img src="images/foto-four.png" alt="foto-four">
+							<img src="images/foto-four.png" alt="foto-four">
+                            <section class="portfolio-descr">
+								<i class="far fa-eye descr"></i>
+								<span class="descr">Labore et dolore magnam</span>
+								<span class="descr">Photography</span> 
+							</section> 
                         </li>
                         <li class="portfolio-item" data-type="logo">
-                            <i class="far fa-eye descr"></i>
-                            <span class="descr">Labore et dolore magnam</span>
-                            <span class="descr">Photography</span>
-                            <img src="images/foto-five.png" alt="foto-five">
+							<img src="images/foto-five.png" alt="foto-five">
+                            <section class="portfolio-descr">
+								<i class="far fa-eye descr"></i>
+								<span class="descr">Labore et dolore magnam</span>
+								<span class="descr">Photography</span> 
+							</section> 
                         </li>
                         <li class="portfolio-item" data-type="branding">
-                            <i class="far fa-eye descr"></i>
-                            <span class="descr">Labore et dolore magnam</span>
-                            <span class="descr">Photography</span>
-                            <img src="images/foto-six.png" alt="foto-six">
+							<img src="images/foto-six.png" alt="foto-six">
+                            <section class="portfolio-descr">
+								<i class="far fa-eye descr"></i>
+								<span class="descr">Labore et dolore magnam</span>
+								<span class="descr">Photography</span> 
+							</section> 
                         </li>
                         <li class="portfolio-item" data-type="web">
-                            <i class="far fa-eye descr"></i>
-                            <span class="descr">Labore et dolore magnam</span>
-                            <span class="descr">Photography</span>
-                            <img src="images/foto-seven.png" alt="foto-seven">
+							<img src="images/foto-seven.png" alt="foto-seven">
+                            <section class="portfolio-descr">
+								<i class="far fa-eye descr"></i>
+								<span class="descr">Labore et dolore magnam</span>
+								<span class="descr">Photography</span> 
+							</section> 
                         </li>
                         <li class="portfolio-item" data-type="branding">
-                            <i class="far fa-eye descr"></i>
-                            <span class="descr">Labore et dolore magnam</span>
-                            <span class="descr">Photography</span>
-                            <img src="images/foto-eight.png" alt="foto-eight">
+							<img src="images/foto-eight.png" alt="foto-eight">
+                            <section class="portfolio-descr">
+								<i class="far fa-eye descr"></i>
+								<span class="descr">Labore et dolore magnam</span>
+								<span class="descr">Photography</span> 
+							</section> 
                         </li>
                     </ul>
                 </section>
