испрвила путь к файлу index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <a href="1.anfal-landing/index.html">anfal-landing</a><br>
         <a href="2.landing-Highdax/index.html">Highdax</a><br>
         <a href="3.sarajevo/index.html">sarajevo</a>
-        <a href="3.tinyone/index.html">tinyone</a>
+        <a href="3.tinyone/app/index.html">tinyone</a>
 		</div>
 		<style>
 			div a {
