--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <div>
-        <a href="1.anfal-landing/index.html">anfal-landing</a><br>
-        <a href="2.landing-Highdax/index.html">Highdax</a><br>
-        <a href="3.sarajevo/index.html">sarajevo</a>
-        <a href="4.tinyone/app/index.html">tinyone</a>
+        <a href="anfal-landing/index.html">anfal-landing</a><br>
+        <a href="landing-Highdax/index.html">Highdax</a><br>
+        <a href="sarajevo/index.html">sarajevo</a>
+        <a href="tinyone/app/index.html">tinyone</a>
 		</div>
 		<style>
 			div a {
