--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 </head>
 <body>
     <div>
-        <a href="anfal-landing/index.html">anfal-landing</a><br>
-        <a href="landing-Highdax/index.html">Highdax</a><br>
-        <a href="sarajevo/index.html">sarajevo</a>
+        <a href="sarajevo/index.html">sarajevo</a><br>
         <a href="tinyone/app/index.html">tinyone</a>
 		</div>
 		<style>
