--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
     <div>
         <a href="sarajevo/index.html">sarajevo</a><br>
-        <a href="tinyone/app/index.html">tinyone</a>
+        <a href="tinyone/app/index.html">tinyone</a><br>
+        <a href="waxom/build/index.html">waxom</a>
 		</div>
 		<style>
 			div a {
