--- a/app/index.html
+++ b/app/index.html
@@ -39,26 +39,30 @@
             <div class="main-title">
                 <h2>Мои работы</h2>
             </div>
+            <div class="toggle-btn">
+                <input type="button" name="layout" class="layout btn" value="Макеты" data-type="layout">
+                <input type="button" name="sites" class="sites btn" value="Сайты" data-type="sites">
+            </div>
             <div class="portfolio-items content-links">
-                <div class="portfolio-item">
+                <div class="portfolio-item" data-type="layout">
                     <a href="../sarajevo/index.html" class="content-link" target="_blank">
                         <img src="img/sarajevo.png" class="img-screen">
                         <p>Макет Sarajevo</p>
                     </a>
                 </div>
-                <div class="portfolio-item">
+                <div class="portfolio-item" data-type="layout">
                     <a href="../tinyone/app/index.html" class="content-link" target="_blank">
                         <img src="img/tinyone.png" class="img-screen">
                         <p>Макет Tinyone</p>
                     </a>
                 </div>
-                <div class="portfolio-item">
+                <div class="portfolio-item" data-type="layout">
                     <a href="../waxom/build/index.html" class="content-link" target="_blank">
                         <img src="img/waxom.png" class="img-screen">
                         <p>Макет Waxom</p>
                     </a>
                 </div>
-                <div class="portfolio-item">
+                <div class="portfolio-item" data-type="sites">
                     <a href="https://stroymat-moscow.ru/" class="content-link" target="_blank">
                         <img src="img/stroymat.png" class="img-screen">
                         <p>Сайт стройматериалов</p>
