добавление кнопки All

--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
                 <h2>Мои работы</h2>
             </div>
             <div class="toggle-btn">
+                <input type="button" name="all" class="all btn" value="Все" data-type="all">
                 <input type="button" name="layout" class="layout btn" value="Макеты" data-type="layout">
                 <input type="button" name="sites" class="sites btn" value="Сайты" data-type="sites">
             </div>
