ссылка на макет сайта electronpv

--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,12 @@
                         <p>Сайт стройматериалов</p>
                     </a>
                 </div>
+                <div class="portfolio-item" data-type="sites">
+                    <a href="../electronpv.loc/index.php" class="content-link" target="_blank">
+                        <img src="img/electronpv.png" class="img-screen">
+                        <p>Сайт сервисного центра</p>
+                    </a>
+                </div>
             </div>
         </div>
     </main>
