редактирование ссылки сайта electronpv

--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
                     </a>
                 </div>
                 <div class="portfolio-item" data-type="sites">
-                    <a href="../electronpv.loc/index.php" class="content-link" target="_blank">
+                    <a href="https://electronpv.kz/" class="content-link" target="_blank">
                         <img src="img/electronpv.png" class="img-screen">
                         <p>Сайт сервисного центра</p>
                     </a>
