исправление багов в уязвимости

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
 
             <div class="header-title">
                 <h1>Aliya Makysheva</h1>
-                <h2>Junior Web Developer</h2>
+                <h2>Junior Frontend Developer</h2>
             </div>
         </div>
     </header>
