добавление ссылки на toxin в портфолио

--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,12 @@
                         <p>Сайт сервисного центра</p>
                     </a>
                 </div>
+                <div class="portfolio-item" data-type="sites">
+                    <a href="../toxin/build/form-elements.html" class="content-link" target="_blank">
+                        <img src="img/toxin.png" class="img-screen">
+                        <p>Макет отеля Toxin</p>
+                    </a>
+                </div>
             </div>
         </div>
     </main>
