--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
                         <p>Сайт сервисного центра</p>
                     </a>
                 </div>
-                <div class="portfolio-item" data-type="sites">
+                <div class="portfolio-item" data-type="layout">
                     <a href="../toxin/build/form-elements.html" class="content-link" target="_blank">
                         <img src="img/toxin.png" class="img-screen">
                         <p>Макет отеля Toxin</p>
