правка путей toxin в readme

--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,7 @@
                     </a>
                 </div>
                 <div class="portfolio-item" data-type="layout">
-                    <a href="../toxin/build/form-elements.html" class="content-link" target="_blank">
+                    <a href="../toxin/build/index.html" class="content-link" target="_blank">
                         <img src="img/toxin.png" class="img-screen">
                         <p>Макет отеля Toxin</p>
                     </a>
