--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
 
             <div class="header-title">
                 <h1>Aliya Makysheva</h1>
-                <h2>Junior Frontend Developer</h2>
+                <h2>Frontend Developer</h2>
             </div>
         </div>
     </header>
@@ -86,13 +86,13 @@
     </main>
     <footer class="footer">
         <div class="social-items" id="contacts">
-            <a href="https://www.linkedin.com/in/aliya-m-001014180/" class="social-item" target="_blank"><i class="fab fa-linkedin-in fa-2x icon"></i></a>
+            <a href="https://www.linkedin.com/in/aliya-m-001014180/" class="social-item social-item--in" target="_blank"><i class="fab fa-linkedin-in fa-2x icon"></i></a>
             <a href="https://t.me/makysheva" class="social-item" target="_blank"><i class="fab fa-telegram-plane fa-2x icon"></i></a>
             <a href="https://github.com/makysheva" class="social-item" target="_blank"><i class="fab fa-github fa-2x icon"></i></a>
         </div>
         <div class="copyright">
             <i class="far fa-copyright"></i>
-            <span class="copyright-text">Made with <i class="fas fa-heart copyright-heart"></i></span>
+            <span class="copyright-text">Made by <a href="https://t.me/makysheva" class="copyright-link" target="_blank"><img src="img/logo.png" class="logo"></a></span>
         </div>
     </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
