добавление папки examples-пример на LocalStorage

--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,13 @@
                         <p>Макет отеля Toxin</p>
                     </a>
                 </div>
+
+                <div class="portfolio-item" data-type="examples">
+                    <a href="../toxin/build/examples/order-form.html" class="content-link" target="_blank">
+                        <img src="examples/images/view.png" class="img-screen">
+                        <p>Пример использования объекта LocalStorage</p>
+                    </a>
+                </div>
             </div>
         </div>
     </main>
