правка путей к картинке examples/order-form/images/

--- a/app/index.html
+++ b/app/index.html
@@ -84,7 +84,7 @@
 
                 <div class="portfolio-item" data-type="examples">
                     <a href="../examples/order-form/order-form.html" class="content-link" target="_blank">
-                        <img src="../examples/images/view.png" class="img-screen">
+                        <img src="../examples/order-form/images/view.png" class="img-screen">
                         <p>Пример использования объекта LocalStorage</p>
                     </a>
                 </div>
