правка стилей в main.css

--- a/app/index.html
+++ b/app/index.html
@@ -82,11 +82,17 @@
                     </a>
                 </div>
 
-                <div class="portfolio-item" data-type="examples">
-                    <a href="../examples/order-form/order-form.html" class="content-link" target="_blank">
-                        <img src="../examples/order-form/images/view.png" class="img-screen">
-                        <p>Пример использования объекта LocalStorage</p>
-                    </a>
+                <div class="line"></div>
+                <div class="examples-title">
+                    <h2>Примеры по Javascript</h2>
+                </div>
+                <div class="examples-wrapper">
+                    <div class="portfolio-item" data-type="examples">
+                        <a href="../examples/order-form/order-form.html" class="content-link" target="_blank">
+                            <img src="../examples/order-form/images/view.png" class="img-screen">
+                            <p class="examples-descr">Пример использования объекта LocalStorage</p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
