--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,13 @@
                 </div>
                 <div class="examples-wrapper">
                     <div class="portfolio-item" data-type="examples">
+                        <a href="https://kink.ru/specialistam/kalkulyator/" class="content-link" target="_blank">
+                            <img src="../examples/calc-kink/calc.png" class="img-screen calc-img">
+                            <p class="examples-descr">Калькулятор для расчета пользы/риска операции</p>
+                        </a>
+                    </div>
+
+                    <div class="portfolio-item" data-type="examples">
                         <a href="../examples/order-form/order-form.html" class="content-link" target="_blank">
                             <img src="../examples/order-form/images/view.png" class="img-screen">
                             <p class="examples-descr">Пример использования объекта LocalStorage</p>
