--- a/examples/order-form/order-form.html
+++ b/examples/order-form/order-form.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Order Form</title>
+    <link rel="shortcut icon" href="../../app/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="order-form.css">
-
 </head>
 <body>
     <h2 class="title">Форма оформления заказа</h2>
