добавлена ссылка на задачу drag-and-drop на главную страницу

--- a/app/index.html
+++ b/app/index.html
@@ -100,6 +100,13 @@
                             <p class="examples-descr">Пример использования объекта LocalStorage</p>
                         </a>
                     </div>
+
+                    <div class="portfolio-item" data-type="examples">
+                        <a href="../examples/simple-slider/simple-slider.html" class="content-link" target="_blank">
+                            <img src="../examples/simple-slider/images/simple-slider.png" class="img-screen">
+                            <p class="examples-descr">Пример использования события Drag-and-Drop</p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
