--- a/examples/simple-slider/simple-slider.html
+++ b/examples/simple-slider/simple-slider.html
@@ -10,6 +10,7 @@
 <body>
     <div class="title">
         <h2>Простой слайдер на JS</h2>
+        <h3>Задача на событие Drag-and-Drop</h3>
     </div>
     <div class="container">
         <div class="slider" id="slider">
