--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,14 @@
                     <a href="#contacts" class="menu-item">Contacts</a>
                 </nav>
 
+                <!-- <nav class="site-nav-menu">
+                    <ul class="site-nav-menu__list">
+                        <li class="active"><a href="#header">Home</a></li>
+                        <li><a href="#services-section">Portfolio</a></li>
+                        <li><a href="#features-section">Contacts</a></li>
+                    </ul> -->
+                <!-- </nav> -->
+
                 <div class="mobile-menu">
                     <a href="#" class="menu-btn">
                         <span></span>
