изменение ссылки на макет sarajevo

--- a/app/index.html
+++ b/app/index.html
@@ -14,25 +14,26 @@
         <div class="container">
             <div class="header-section">
                 <a href="#"><img src="img/logo.png" class="logo"></a>
-                <nav class="menu-wrap">
+
+                <!-- <nav class="menu-wrap">
                     <a href="#header" class="menu-item">Home</a>
                     <a href="#portfolio" class="menu-item">Portfolio</a>
                     <a href="#contacts" class="menu-item">Contacts</a>
+                </nav> -->
+
+                <div class="menu__burger">
+                    <span></span>
+                </div>
+
+                <nav class="header__menu">
+                    <ul class="header__list">
+                        <li><a class="header__link" href="#header">Home</a></li>
+                        <li><a class="header__link" href="#portfolio">Portfolio</a></li>
+                        <li><a class="header__link" href="#contacts">Contacts</a></li>
+                    </ul>
                 </nav>
 
-                <!-- <nav class="site-nav-menu">
-                    <ul class="site-nav-menu__list">
-                        <li class="active"><a href="#header">Home</a></li>
-                        <li><a href="#services-section">Portfolio</a></li>
-                        <li><a href="#features-section">Contacts</a></li>
-                    </ul> -->
-                <!-- </nav> -->
-
-                <div class="mobile-menu">
-                    <a href="#" class="menu-btn">
-                        <span></span>
-                    </a>
-                </div>
+                
             </div>
 
             <div class="header-title">
@@ -54,39 +55,51 @@
             </div>
             <div class="portfolio-items content-links">
                 <div class="portfolio-item" data-type="layout">
-                    <a href="../sarajevo/index.html" class="content-link" target="_blank">
+                    <a href="https://makysheva.github.io/sarajevo/" class="content-link" target="_blank">
                         <img src="img/sarajevo.png" class="img-screen">
-                        <p>Макет Sarajevo</p>
+                        <p class="portfolio-item__text">Макет Sarajevo</p>
                     </a>
                 </div>
                 <div class="portfolio-item" data-type="layout">
                     <a href="../tinyone/app/index.html" class="content-link" target="_blank">
                         <img src="img/tinyone.png" class="img-screen">
-                        <p>Макет Tinyone</p>
+                        <p class="portfolio-item__text">Макет Tinyone</p>
                     </a>
                 </div>
                 <div class="portfolio-item" data-type="layout">
                     <a href="../waxom/build/index.html" class="content-link" target="_blank">
                         <img src="img/waxom.png" class="img-screen">
-                        <p>Макет Waxom</p>
+                        <p class="portfolio-item__text">Макет Waxom</p>
                     </a>
                 </div>
                 <div class="portfolio-item" data-type="sites">
                     <a href="https://stroymat-moscow.ru/" class="content-link" target="_blank">
                         <img src="img/stroymat.png" class="img-screen">
-                        <p>Сайт стройматериалов</p>
+                        <p class="portfolio-item__text">Сайт стройматериалов</p>
                     </a>
                 </div>
                 <div class="portfolio-item" data-type="sites">
                     <a href="https://electronpv.kz/" class="content-link" target="_blank">
                         <img src="img/electronpv.png" class="img-screen">
-                        <p>Сайт сервисного центра</p>
+                        <p class="portfolio-item__text">Сайт сервисного центра</p>
                     </a>
                 </div>
                 <div class="portfolio-item" data-type="layout">
                     <a href="../toxin/build/index.html" class="content-link" target="_blank">
                         <img src="img/toxin.png" class="img-screen">
-                        <p>Макет отеля Toxin</p>
+                        <p class="portfolio-item__text">Макет отеля Toxin</p>
+                    </a>
+                </div>
+                <div class="portfolio-item" data-type="sites">
+                    <a href="https://umelyi-master.ru" class="content-link" target="_blank">
+                        <img src="img/master-barakat.png" class="img-screen">
+                        <p class="portfolio-item__text">Сайт по ремонту бытовой техники</p>
+                    </a>
+                </div>
+                <div class="portfolio-item" data-type="sites">
+                    <a href="../freehand/build/index.html" class="content-link" target="_blank">
+                        <img src="img/freehand.png" class="img-screen">
+                        <p class="portfolio-item__text">Макет Freehand</p>
                     </a>
                 </div>
 
@@ -126,8 +139,7 @@
             <a href="https://github.com/makysheva" class="social-item" target="_blank"><i class="fab fa-github fa-2x icon"></i></a>
         </div>
         <div class="copyright">
-            <i class="far fa-copyright"></i>
-            <span class="copyright-text">Made by <a href="https://t.me/makysheva" class="copyright-link" target="_blank"><img src="img/logo.png" class="logo"></a></span>
+            <span class="copyright-text">Made by <a href="https://t.me/makysheva" class="copyright-link" target="_blank">Makysheva Aliya</a></span>
         </div>
     </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
