изменение ссылки на макет freehand

--- a/app/index.html
+++ b/app/index.html
@@ -97,7 +97,7 @@
                     </a>
                 </div>
                 <div class="portfolio-item" data-type="sites">
-                    <a href="https://makysheva.github.io/freehand/index.html" class="content-link" target="_blank">
+                    <a href="https://makysheva.github.io/freehand/build/index.html" class="content-link" target="_blank">
                         <img src="img/freehand.png" class="img-screen">
                         <p class="portfolio-item__text">Макет Freehand</p>
                     </a>
